apply plugin: 'java'
//apply plugin: 'me.tatarka.retrolambda'


compileJava {
    sourceCompatibility = '1.8'
    targetCompatibility = '1.8'
}

repositories {
    mavenCentral()
}
configurations{
    serializeTestOutput
}
dependencies {
    //compile fileTree(include: ['*.jar'], dir: 'libs')
    testCompile 'junit:junit:4.12'
    testCompile 'org.hamcrest:hamcrest-all:1.3'
    compile 'org.slf4j:slf4j-api:1.7.12'
    compile project(path: ':json')
    testCompile project(path: ':json')
    compile 'org.slf4j:slf4j-api:1.7.12'
}

compileJava.options.encoding = 'UTF-8'
compileTestJava.options.encoding = 'UTF-8'

compileTestJava {
    sourceCompatibility = '1.8'
    targetCompatibility = '1.8'
}